<resources>
    <string name="app_name">Chefko</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="name_hint">"Enter Your Name "</string>
    <string name="Email_hit">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="btn_login">"Login "</string>
    <string name="DailyInspiration_txt">Daily Inspiration</string>
    <string name="youmight_txt">You Might Like</string>
    <string name="Sign_up_txt">Signup</string>
    <string name="lgin" />
    <string name="login_txt">Login</string>
    <string name="login">Login</string>
    <string name="log_in_txt">Login</string>

    <string name="Welcome_txt">WELCOME</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message">You can also sign up with google</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="daily_insp_txt">Daily Inspiration</string>
    <string name="you_might_like_txt">You Might Like</string>
    <string name="name_img" />
    <string name="img_name" />

    <string name="acc_setting">Account Settings</string>
    <string name="acc_sett_txt">Account Settings</string>
    <string name="logout_txt">Logout</string>

    <string name="search_title">Search specific meal</string>
    <string name="cuisine">Cuisine</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="favoriteCuisine">search your favorite cuisine</string>
    <string name="favoriteIngredient">search your favorite ingredient</string>
    <string name="favoriteCategory">search your favorite Category</string>
    <string name="favorites">Your favorites</string>
    <string name="recipe">Recipe :</string>
    <string name="get_start">get start</string>

    <string name="description1"> "You'll find every recipe you need"</string>
    <string name="description2"> Explore different cuisines</string>
    <string name="description3">Let\'s do It together</string>
    <string name="logoutbtn">Logout</string>
    <string name="forgottxt">Forgot Password? Recover</string>
    <string name="skipBtn">Skip</string>
    <string name="skip">Skip</string>
    <string name="btnfav">"      "</string>
    <string name="fav_daily_insp_btn">Add To Favorite</string>
    <string name="show_more_btn">Show More Details</string>
    <string name="welcome">Welcome</string>
    <string name="ing">Ingredients</string>
    <string name="recipeTiltle">Recipe</string>
    <string name="appName">𝒄𝒉𝒆𝒇𝒌𝒐</string>
    <string name="Scroll_Plan">PlanScroll</string>
    <string name="planTopTxt">Your planned meals</string>
    <string name="sat_txt">Saturday</string>
    <string name="sun_txt">Sunday</string>
    <string name="mon_txt">Monday</string>
    <string name="tus_txt">Tuesday</string>
    <string name="wed_txt">Wednesday</string>
    <string name="Thu_txt">Thursday</string>
    <string name="Fri_txt">Friday</string>
    <string name="backup">Backup</string>
    <string name="warning">Something went wrong, please check your connection and try again!</string>

    <string-array name="calendar">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>



    </string-array>



</resources>