<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="335dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/darkGreen"
            android:backgroundTint="@color/darkGreen"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/baseline_energy_savings_leaf_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/planTopTxt"
            android:textColor="@color/darkYellow"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="381dp"
                android:layout_height="1583dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/sat_txt"
                    android:textColor="@color/darkYellow"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewsat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19">

                </androidx.recyclerview.widget.RecyclerView>

                <View
                    android:id="@+id/viewSat"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewsat"
                    tools:layout_editor_absoluteX="-1dp" />
                /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////


                <TextView
                    android:id="@+id/sunTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/sun_txt"
                    android:textColor="@color/darkYellow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewSat" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sunTxt"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/viewSun"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewSun"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-1dp" />
                /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/monTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/mon_txt"

                    android:textColor="@color/darkYellow"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewSun" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/monTxt"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/viewMon"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewMon"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-1dp" />
                /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/tuesTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/tus_txt"

                    android:textColor="@color/darkYellow"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewMon" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tuesTxt"
                    tools:ignore="DuplicateIds,MissingConstraints" />

                <View
                    android:id="@+id/viewTus"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewTuesday"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-1dp" />
                /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/WedTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/wed_txt"

                    android:textColor="@color/darkYellow"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewTus" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewWed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/WedTxt"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/viewWed"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewWed"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-1dp" />
                /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/ThuTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/Thu_txt"

                    android:textColor="@color/darkYellow"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewWed" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewThurs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ThuTxt"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/viewThurs"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewThurs"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-1dp" />

                /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/FriTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/boogaloo"

                    android:text="@string/Fri_txt"
                    android:textColor="@color/darkYellow"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewThurs" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFri"
                    android:layout_width="872dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/FriTxt"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/viewFri"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkGreen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewFri"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
